# amble

./: .gitignore  AGENTS.md  BRANCH_PLAN.md  Cargo.toml  DEVLOG.md  PRE_RELEASE_TODO.md  amble_map.drawio  comprehensive_highlight_test.amble  rustfmt.toml  showcase_themes.sh  snippet_test.amble  test_all_theme_colors.sh  test_theme.sh
amble_content_editor/: Cargo.toml  create_modules.sh
amble_content_editor/src/: lib.rs  main.rs  style.css
amble_engine/: .gitignore  BRANCH_PLAN.md  Cargo.toml  README.md  THEME_SYSTEM.md  brainstorm.md  engine_notes.md
amble_engine/data/: goals.toml  help.txt  help_basic.txt  help_commands.toml  intro.txt  items.toml  npcs.toml  player.toml  rooms.toml  scoring.toml  spinners.toml  themes.toml  triggers.toml  world.ron
amble_engine/data/amble-demo/: amble-demo.ron
amble_engine/data/worlds/: hospital.ron
amble_engine/docs/: README.md  engine_overview.md
amble_engine/src/: command.rs  data_paths.rs  dev_command.rs  entity_search.rs  goal.rs  health.rs  helpers.rs  idgen.rs  ids.rs  item.rs  lib.rs  loader.rs  main.rs  markup.rs  npc.rs  player.rs  repl.rs  repl_grammar.pest  room.rs  save_files.rs  scheduler.rs  slug.rs  spinners.rs  style.rs  theme.rs  trigger.rs  view.rs  world.rs
amble_engine/src/loader/: goals.rs  help.rs  items.rs  npcs.rs  placement.rs  player.rs  rooms.rs  scoring.rs  spinners.rs  triggers.rs  worlddef.rs
amble_engine/src/loader/triggers/: raw_action.rs  raw_condition.rs
amble_engine/src/repl/: dev.rs  input.rs  inventory.rs  item.rs  look.rs  movement.rs  npc.rs  system.rs
amble_engine/src/trigger/: action.rs  condition.rs
amble_engine/src/trigger/action/: player.rs  tests.rs
amble_engine/src/view/: render_health.rs  render_item.rs  render_npc.rs  render_system.rs  render_trig.rs  view_item.rs
amble_engine/tests/: basic.rs  schedule_conditional.rs  schedule_conditional_toml.rs
amble_engine/tools/: regenerate_snippets.rs
amble_script/: Cargo.toml  README.md
amble_script/data/: amble_playtest_notes.md  goals.amble  rooms.amble  spinners.amble  triggers.amble
amble_script/data/Amble/: dev_playground.amble  game.amble  goals.amble  help_basic.txt  intro.txt  items.amble  npcs.amble  player.ron  rooms.amble  triggers.amble
amble_script/data/Amble/ambient/: ambient.amble
amble_script/data/Amble/areas/bldg_main_floor/events/: lab_fire.amble
amble_script/data/Amble/areas/bldg_main_floor/npcs/: cmot_dibbler.amble  gonk_droid.amble  receptionist.amble
amble_script/data/Amble/areas/bldg_main_floor/puzzles/: get_elevator_keycard.amble  get_invitation.amble  open_a_portal.amble
amble_script/data/Amble/areas/bldg_main_floor/rooms/: antechamber.amble  aperture_lab.amble  b_a_office.amble  gourd-shrine.amble  lift_bank_main.amble  lift_main.amble  lounge.amble  main_lobby.amble  patio.amble  poetry_panic.amble  portal_room.amble  restaurant.amble  shoe_shrine.amble  stargate_room.amble  supply_closet.amble  vip_bathroom.amble
amble_script/data/Amble/areas/bldg_perimeter/rooms/: east_of_building.amble  front_entrance.amble  inca_road.amble  loading_dock.amble
amble_script/data/Amble/areas/bldg_sublevel/npcs/: black_knight.amble  emh.amble  hal_9000.amble
amble_script/data/Amble/areas/bldg_sublevel/puzzles/: pass_black_knight.amble
amble_script/data/Amble/areas/bldg_sublevel/rooms/: corridor_north.amble  corridor_south.amble  lift_sublevel_1.amble  med_bay.amble  monolith_room.amble  observation_room.amble  room_aa_3b.amble  security_station.amble  sublevel_1_entrance.amble
amble_script/data/Amble/areas/snowfield/npcs/: husky-thing.amble
amble_script/data/Amble/areas/snowfield/rooms/: ice_pit.amble  snow-camp.amble  snowfield.amble
amble_script/data/Amble/global/: anywhere_events.amble  hint_radio.amble  hints.amble  key_items.amble  shoe_or_gourd.amble  status_effects.amble  useful_items.amble
amble_script/data/Amble/global/hal_puzzle/: hal_module_1.amble  hal_module_2.amble  hal_module_3.amble  reboot-hal.amble
amble_script/data/Seaside/: boathouse_slipway.amble  fish_market_shed.amble  intro.txt  lighthouse_path.amble  net_yard.amble  player.toml  quay_square.amble
amble_script/docs/: dsl_cheat_sheet.md  dsl_creator_handbook.md  goals_dsl_guide.md  items_dsl_guide.md  npc_dsl_guide.md  npcs_dsl_guide.md  rooms_dsl_guide.md  rooms_dsl_plan.md  session_notes_2025-09-07.md  spinners_dsl_guide.md  trigger_dsl_guide.md
amble_script/examples/: area_demo.amble  first.able  goals_demo.amble  items_demo.amble  multi_if.amble  npcs_demo.amble  rooms_demo.amble  second.amble  third.amble
amble_script/src/: grammar.pest  lib.rs  main.rs  parser.rs  worlddef.rs
amble_script/src/parser/: action_sets.rs  actions.rs  conditions.rs  game.rs  goal.rs  helpers.rs  item.rs  mod.rs  npc.rs  room.rs  spinner.rs  trigger.rs
amble_script/tests/: items_consumable.rs  items_golden.rs  items_requires_golden.rs  npcs_golden.rs  rooms_exits_and_overlays_golden.rs  rooms_golden.rs  rooms_overlay_npc_states_block.rs
amble_script/tests/fixtures/: items_basic_three.toml  items_consumable.toml  items_requires.toml  npcs_basic.toml  npcs_roundtrip.toml  rooms_exits_with_options.toml  rooms_minimal_high_ridge.toml  rooms_observation_deck.toml  rooms_overlay_flag_pair.toml  rooms_overlay_npc_states_block.toml  rooms_overlays_multi.toml
(+74 files in other folders)
