[package]
name = "amble_content_editor"
version = "0.1.0"
edition = "2021"
authors = ["Amble Development Team"]
description = "GTK4-based content editor for the Amble game engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
amble_engine = { path = "../amble_engine" }
anyhow = "1.0"
thiserror = "1.0"

# GTK4 and UI
gtk4 = { version = "0.7", features = ["v4_12"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
sourceview5 = "0.7"

# Async runtime for GTK
glib = "0.18"
async-channel = "2.1"
tokio = { version = "1.35", features = ["full"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = { version = "0.21", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }

# File operations and watching
notify = "6.1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Undo/Redo system
im = "15.1" # Immutable data structures for efficient undo/redo

# Validation
regex = "1.10"
lazy_static = "1.4"

# Testing helpers
tempfile = "3.8"
pretty_assertions = "1.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[build-dependencies]
glib-build-tools = "0.18"

[[bin]]
name = "amble-editor"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
