[package]
name = "amble_engine"
version = "0.35.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
gametools = { version = "0.4.0", features = ["serde"] }
log = "0.4.27"
rand = "0.9.1"
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
toml = "0.8.22"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
variantly = "0.4.0"

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "regenerate_snippets"
path = "tools/regenerate_snippets.rs"
