[package]
name = "amble_engine"
version = "0.63.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "docs/engine_notes.md"
readme = "docs/README.md"
description = "Data-first interactive fiction engine and REPL for worlds authored in the Amble DSL."
keywords = ["interactive-fiction", "text-adventure", "game-engine", "cli", "dsl"]
categories = ["game-engines", "games", "command-line-utilities"]

[features]
default = []
dev-mode = []

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
gametools = { version = "0.4.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.27"
pest = "2.8.1"
pest_derive = "2.8.1"
pest_meta = "2.8.3"
rand = "0.9.1"
regex = "1.11.1"
ron = "0.10.1"
rustyline = { version = "14.0.0", features = ["with-file-history"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
toml = "0.8.22"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
variantly = "0.4.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.13.0"

[[bin]]
name = "regenerate_snippets"
path = "tools/regenerate_snippets.rs"
