[package]
name = "amble_script"
version = "0.62.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Authoring-focused DSL, parser, and compiler that produces Amble engine TOML data."
keywords = ["dsl", "parser", "compiler", "interactive-fiction", "cli"]
categories = ["compilers", "parsing", "command-line-utilities"]

[lib]
name = "amble_script"
path = "src/lib.rs"

[[bin]]
name = "amble_script"
path = "src/main.rs"

[dependencies]
pest = "2"
pest_derive = "2"
thiserror = "1"
toml_edit = "0.21"
toml = "0.8"
